force-app/main/default/objects/Product2/fields/FedRAMP_Compliance__c.field-meta.xml
<CustomField>
    <fullName>FedRAMP_Compliance__c</fullName>
    <label>FedRAMP Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>