force-app/main/default/objects/Product2/fields/Network_Availability__c.field-meta.xml
<CustomField>
    <fullName>Network_Availability__c</fullName>
    <label>Network Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3G</fullName>
            </value>
            <value>
                <fullName>4G</fullName>
            </value>
            <value>
                <fullName>5G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>