force-app/main/default/objects/Product2/fields/Product_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Product_Benefit__c</fullName>
    <label>Product Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Automation</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>